# smarterplaylists-rs

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.githooks/: pre-commit
migrations/: 20230218215318_create_tables.sql  20230218215318_users_table.sql
src/: assets.rs  cache.rs  controller.rs  error.rs  macros.rs  main.rs  models.rs  routes.rs
src/components/: combiners.rs  conditinals.rs  filters.rs  mod.rs  sources.rs
src/components/conditionals/: mod.rs
src/components/filters/: filter_dedup_artist.rs  filter_dedup_track.rs  filter_take.rs  mod.rs
src/components/sources/: mod.rs  source_album.rs  source_artist_top_tracks.rs  source_user_liked_tracks.rs
src/handlers/: api_spotify.rs  api_web.rs  auth.rs  mod.rs
src/spotify/: mod.rs
