[package]
name = "smarterplaylists-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = [ "cookie-session" ] }
actix-web = "4"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.8"
futures-util = "0.3.26"
log = "0.4.17"
mime_guess = "2"
rspotify = { version = "0.11", features = [ "client-ureq", "ureq-rustls-tls" ], default-features = false }
rust-embed="6.4.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite", "json" ] }
